src/objects/SubsystemModule__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that this module is active</description>
        <inlineHelpText>Indicates that this module is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this module should be run asynchronously in this transaction</description>
        <inlineHelpText>Indicates that this module should be run asynchronously in this transaction</inlineHelpText>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Name of the class to be run</description>
        <inlineHelpText>Name of the class to be run</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Order__c</fullName>
        <description>Order in which this module should be run, helps maintain dependencies in the modules and data.</description>
        <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Name of the object this module should be run for</description>
        <inlineHelpText>Name of the object this module should be run for</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Actions__c</fullName>
        <description>Trigger Actions in which this module should fire</description>
        <inlineHelpText>Trigger Actions in which this module should fire (beforeinsert, etc.)</inlineHelpText>
        <label>Trigger Actions</label>
        <type>TextArea</type>
    </fields>
    <label>Subsystem Module</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsystem Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>